Added struct User

--- a/src/Server/Server/Server.vcxproj
+++ b/src/Server/Server/Server.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClInclude Include="PerPipeStruct.h" />
     <ClInclude Include="PipeServer.h" />
+    <ClInclude Include="User.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
