--- a/src/Server/Server/Server.vcxproj.filters
+++ b/src/Server/Server/Server.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="PipeServer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="User.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
