--- a/src/Client/Client/Client.vcxproj.filters
+++ b/src/Client/Client/Client.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="Rules.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BruteForce.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
