Declared and partly implemented class BruteForce

--- a/src/Client/Client/Client.vcxproj
+++ b/src/Client/Client/Client.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="Rules.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BruteForce.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
